# code-snippets

./: .gitignore  .project  .pydevproject  README.md  push.sh
alg/: kalman_filter.py
cpp/: test.cc
cpp/alg/: accumulate_test.cc  back_inserter_test.cc  copy_replace_test.cc  fill_test.cc  heap.cc  heap.h  sort_unique.cc  test_find.cc  test_heap.cc  test_sort.cc
cpp/algorithm/: bind_demo.cc  inserter_demo.cc
cpp/cls/: cls.cpp  cls.h  copy_constructor.cc  copy_operation.cc  cross_ref.cc  delete_arr.cc  delete_operation.cc  function_deleted.cc  inline_test.cc  log  overide_demo.cc  static_member.cc  test.cc  test_call_father_method.cc  test_constructor_init_list.cc  test_field_init.cc  test_friend.cc  test_mutable.cc  test_return_this.cc  test_vector_polymorphy.cc
cpp/containers/: hash_demo.cc  multiset_demo.cc  pair_demo.cc  test_map.cc  unordered_map_demo.cc
cpp/data_type/: auto_test.cc  const_pointer_test.cc  const_test.cc  test_const_cast.cc  test_def_dtype.cc
cpp/file_io/: write_file.cc
cpp/func/: array_param.cc  func_pointer.cc  lambda_demo.cc  main_argv.cc  practice.cc  return_in_for_test.cc  return_pointer_test.cc  test_ret_list.cc  test_ret_ref.cc  varargs_test.cc
cv2/: optical_flow.py  optical_flow_dense.py  test_mser.py
leetcode/: merge_slice.py  mid_number.py
opencv/mean_of_cv_mat/: CMakeLists.txt  CvMatMeanTest.cpp
python/: Property_demo.ipynb  arg_scope.ipynb  function_attr.ipynb  inplace_operation.py  inplace_operator.py  list_generator.py  operator_overwritten.py  test_nametuple.py  tuple_unpacking.py
tf/: test_accum_grads.py
(+93 files in other folders)
